--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -25,8 +25,11 @@
                 <td>@item.Descripcion</td>
                 <td>@item.Cantidad</td>
                 <td>
-                    <button type="button" class="btn-close" aria-label="Close"><i class="bi bi-x"></i></button>
-                    <button type="button" class="btn-check" aria-label="Check"><i class="bi bi-check"></i></button>
+                    <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                        <button type="button" class="btn btn-warning"><i class="bi bi-pencil"> Editar</i></button>
+                        <button type="button" class="btn btn-success"><i class="bi bi-eye"> Ver</i></button>
+                        <button type="button" class="btn btn-danger"><i class="bi bi-x"> Eliminar</i></button>
+                    </div>
                 </td>
             </tr>
         }
