--- a/Views/Producto/Index.cshtml
+++ b/Views/Producto/Index.cshtml
@@ -26,7 +26,7 @@
                 <td>@item.Cantidad</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                        <button type="button" class="btn btn-success"><i class="bi bi-eye"> Ver</i></button>
+                        <a asp-action="Details" asp-route-IdProducto="@item.IdProducto" type="button" class="btn btn-success"><i class="bi bi-eye"> Ver</i></a>
                         <a asp-action="Edit" asp-route-IdProducto="@item.IdProducto" class="btn btn-warning"><i class="bi bi-pencil"> Editar</i></a>
                         <a asp-action="Delete" asp-route-IdProducto="@item.IdProducto" class="btn btn-danger"><i class="bi bi-x"> Eliminar</i></a>
                     </div>
