--- a/Views/Producto/Edit.cshtml
+++ b/Views/Producto/Edit.cshtml
@@ -23,7 +23,7 @@
 
     <div class="row">
         <div class="col-6">
-            <button type="submit" class="btn btn-primary">Crear</button>
+            <button type="submit" class="btn btn-primary">Editar</button>
         </div>
         <div class="col-6">
             <a asp-action="Index" class="btn btn-primary">Volver</a>
